# dia_xpu_intel_arc_gpu

./: README.md  app.py  cli.py  pyproject.toml  run_dia_xpu.bat  setup_xpu.py
dia/: layers.py  model.py  state.py
docker/: Dockerfile.gpu
example/: benchmark.py  simple.py  simple_batch.py  voice_clone.py  voice_clone_batch.py
